19 Jan 2012: Wouter
	- show package version in probe results dialog.

17 Jan 2012: Wouter
	- do not just refresh the systray, but entire desktop (for windows).
	- fix dnssec-trigger-control error printout if SSL files fail.
	- dnssec-trigger-control uses registry config location (for windows).
	- install script removes leftover trayicons using direct windows API.

14 Jan 2012: Wouter
	- show version number in add-removeprograms configpanel (windows).
	- refresh systray after install to solve stray tray icon (for windows).

13 Jan 2012: Wouter
	- Use Processes.dll code (can be freely used, source provided) for
	  kill process in windows NSIS installer.  Compiled to 6kb (not 50kb).
	  Processes.dll was made by Andrei Ciubotaru.
	- Attempt to add DHCPv6 support for windows.
	- If hotspot-signon, set override servers right away on a network
	  change, so the user does not have to wait for 10 seconds after a
	  change of the wifi.

10 Jan 2012: Wouter
	- truncate pidfile portable to windows.

6 Jan 2012: Wouter
	- truncate pidfile (just like NSD fix, in case directory not owned).

19 Dec 2011: Wouter
	- wait some more during reinstall on windows, to help race condition.
	- release 0.9
	- trunk if 1.0 under development.

16 Dec 2011: Wouter
	- attempt to fix endless loop on windows (reported by Alan Clegg).
	- windows installer waits for services to come to a full stop.

15 Dec 2011: Wouter
	- detailprints in windows installer and uninstaller.
	- stoppanels waits for the connection of the panel to close, this
	  may remove re-install race conditions.

14 Dec 2011: Wouter
	- Set hook throttleinterval to 1 second, this reduces the osx wakeup
	  and bootup wrong probes because the hook was throttled for 10 seconds.

13 Dec 2011: Wouter
	- release 0.8.
	- trunk is 0.9 under development.

12 Dec 2011: Wouter
	- Fix apple brick by installer, because of tarfile inclusion of
	  extended attributes that overwrote system dir extended attributes.

5 Dec 2011: Wouter